* When a directory to be deleted has children add both its children and the directory * Check if an item's parent actually has siblings to avoid crash

BUG: 116374


svn path=/branches/KDE/3.5/kdeutils/ark/; revision=513612